--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -12,10 +12,10 @@ env:
   # please change to your own config.
   # this actions generate only this year
   # If you fork this please change the type to yours below
-  TYPE: "ns, duolingo, issue, twitter, github, pass" # support strava/gpx/ns/cichang/shanbay/duolingo/issue/leetcode/twitter/github/gitlab/kindle/bilibili/wakatime/dota2, Please change the 'pass' it to your own separated by commas
-  ME: Yihong0618
-  GITHUB_NAME: yihong0618
-  GITHUB_EMAIL: zouzou0208@gmail.com
+  TYPE: "issue" # support strava/issue, Please change the 'pass' it to your own separated by commas
+  ME: ColynXu
+  GITHUB_NAME: colynxu
+  GITHUB_EMAIL: colynxu@gmail.com
 
 jobs:
   sync:
@@ -46,75 +46,11 @@ jobs:
           pip install -r requirements.txt
         if: steps.pip-cache.outputs.cache-hit != 'true'
 
-      - name: Run sync ns script
-        if: contains(env.TYPE, 'ns')
-        run: |
-          python cli.py ns --session_token ${{ secrets.NS_SESSION_TOKEN }} --device_id ${{ secrets.NS_DEVICE_ID }} --me ${{ env.ME }}
-
-      - name: Run sync strava script
-        if: contains(env.TYPE, 'strava')
-        run: |
-          python cli.py strava --client_id ${{ secrets.STRAVA_CLIENT_ID }} --client_secret ${{ secrets.STRAVA_CLIENT_SECRET }} --refresh_token ${{ secrets.STRAVA_CLIENT_REFRESH_TOKEN }} --me ${{ env.ME }}
-
-      - name: Run sync shanbay script
-        if: contains(env.TYPE, 'shanbay')
-        run: |
-          python cli.py shanbay --user_name ${{ secrets.SHANBAY_USER_NAME }}  --special-color1 '#33C6A4' --special-color2  '#33C6A4' --me ${{ env.ME }}
-
-      - name: Run sync duolingo script
-        if: contains(env.TYPE, 'duolingo')
-        run: |
-          python cli.py duolingo --user_name ${{ secrets.DUOLINGO_USER_NAME }} --me ${{ env.ME }}
-
-      - name: Run sync cichang script
-        if: contains(env.TYPE, 'cichang')
-        run: |
-          python cli.py cichang --user_name ${{ secrets.CICHANG_USER_NAME }} --password ${{ secrets.CICHANG_PASSWORD }} --me ${{ env.ME }}
-
       - name: Run sync issue script
         if: contains(env.TYPE, 'issue')
         run: |
-          python cli.py issue --issue_number ${{ secrets.ISSUE_NUMBER }} --repo_name ${{ secrets.REPO_NAME }} --token ${{ secrets.G_T }} --me ${{ env.ME }}
+          python cli.py issue --issue_number ${{ secrets.PushUps_NUMBER }} --repo_name ${{ secrets.REPO_NAME }} --token ${{ secrets.G_T }} --me ${{ env.ME }}
 
-      - name: Run sync leetcode script
-        if: contains(env.TYPE, 'leetcode')
-        run: |
-          python cli.py leetcode --cookie  '${{ secrets.LEETCODE_COOKIE }} --me ${{ env.ME }}
-
-      - name: Run sync twitter script
-        if: contains(env.TYPE, 'twitter')
-        run: |
-          python cli.py twitter --user_name ${{ secrets.TWITTER_USER_NAME }} --me ${{ env.ME }} --with-animation --with-skyline
-
-      - name: Run sync github script
-        if: contains(env.TYPE, 'github')
-        run: |
-          python cli.py github --user_name ${{ secrets.G_USER_NAME }} --me ${{ env.ME }} --with-animation
-
-      - name: Run sync gitlab script
-        if: contains(env.TYPE, 'gitlab')
-        run: |
-          python cli.py gitlab --user_name ${{ secrets.GITLAB_USER_NAME }} --me ${{ env.ME }} --with-animation
-
-      - name: Run sync kindle script
-        if: contains(env.TYPE, 'kindle')
-        run: |
-          python cli.py kindle --cookie  '${{ secrets.KINDLE_COOKIE }} --me ${{ env.ME }}
-
-      - name: Run sync bilibili script
-        if: contains(env.TYPE, 'bilibili')
-        run: |
-          python3 cli.py bilibili --cookie "${{ secrets.BILIBILI_COOKIE }}" --me ${{ env.ME }}
-
-      - name: Run sync wakatime script
-        if: contains(env.TYPE, 'wakatime')
-        run: |
-          python3 cli.py wakatime --key "${{ secrets.WAKATIME_KEY }}" --me ${{ env.ME }}
-
-      - name: Run sync dota2 script
-        if: contains(env.TYPE, 'dota2')
-        run: |
-          python3 cli.py dota2 --id "${{ secrets.DOTA2_ID }}" --me ${{ env.ME }}
 
       - name: Mv svg files to examples
         # only for me to show
