--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -13,9 +13,9 @@ env:
   # this actions generate only this year
   # If you fork this please change the type to yours below
   TYPE: "issue" # support strava/issue, Please change the 'pass' it to your own separated by commas
-  ME: ColynXu
-  GITHUB_NAME: colynxu
-  GITHUB_EMAIL: colynxu@gmail.com
+  ME: Yihong0618
+  GITHUB_NAME: yihong0618
+  GITHUB_EMAIL: zouzou0208@gmail.com
 
 jobs:
   sync:
