--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -13,7 +13,7 @@ env:
   # this actions generate only this year
   # If you fork this please change the type to yours below
   TYPE: "issue" # support strava/issue, Please change the 'pass' it to your own separated by commas
-  ME: Yihong0618
+  ME: ColynXu
   GITHUB_NAME: colynxu
   GITHUB_EMAIL: colynxu@gmail.com
 
@@ -49,7 +49,7 @@ jobs:
       - name: Run sync issue script
         if: contains(env.TYPE, 'issue')
         run: |
-          python cli.py issue --issue_number ${{ secrets.PushUps_NUMBER }} --repo_name ${{ secrets.REPO_NAME }} --token ${{ secrets.G_T }}
+          python cli.py issue --issue_number ${{ secrets.PushUps_NUMBER }} --repo_name ${{ secrets.REPO_NAME }} --token ${{ secrets.G_T }} --me ${{ env.ME }}
 
 
       - name: Mv svg files to examples
