--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           github-token: ${{ secrets.G_T }}
           commit-message: "Make new poster"
-          files: examples OUT_FOLDER
+          files: examples Data
           rebase: "true"
           name: ${{ env.GITHUB_NAME }}
           email: ${{ env.GITHUB_EMAIL }}
