--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -51,17 +51,13 @@ jobs:
         run: |
           python cli.py issue --issue_number ${{ secrets.PushUps_NUMBER }} --repo_name ${{ secrets.REPO_NAME }} --token ${{ secrets.G_T }} --me ${{ env.ME }}
 
-      - name: Mv svg files to examples
-        # only for me to show
-        if: github.repository_owner == 'colynxu'
-        run: mv Data/*.svg examples/ && mv Data/*.stl examples/
-        
+       
       - name: Push new svg posters
         uses: github-actions-x/commit@v2.6
         with:
           github-token: ${{ secrets.G_T }}
           commit-message: "Make new poster"
-          files: examples Data
+          files: Data
           rebase: "true"
           name: ${{ env.GITHUB_NAME }}
           email: ${{ env.GITHUB_EMAIL }}
