--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -52,12 +52,17 @@ jobs:
           python cli.py issue --issue_number ${{ secrets.PushUps_NUMBER }} --repo_name ${{ secrets.REPO_NAME }} --token ${{ secrets.G_T }} --me ${{ env.ME }}
 
        
+      - name: Mv svg files to examples
+        # only for me to show
+        if: github.repository_owner == 'colynxu'
+        run: mv OUT_FOLDER/*.svg examples/ && mv OUT_FOLDER/*.stl examples/
+
       - name: Push new svg posters
         uses: github-actions-x/commit@v2.6
         with:
           github-token: ${{ secrets.G_T }}
           commit-message: "Make new poster"
-          files: Data
+          files: examples OUT_FOLDER
           rebase: "true"
           name: ${{ env.GITHUB_NAME }}
           email: ${{ env.GITHUB_EMAIL }}
