--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Mv svg files to examples
         # only for me to show
         if: github.repository_owner == 'colynxu'
-        run: mv OUT_FOLDER/*.svg examples/ && mv OUT_FOLDER/*.stl examples/
+        run: mv OUT_FOLDER/*.svg examples/
 
       - name: Push new svg posters
         uses: github-actions-x/commit@v2.6
